--- a/Python/Assignment_2.ipynb
+++ b/Python/Assignment_2.ipynb
@@ -131,7 +131,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**4.What are the values of the following expressions ?\n**",
+        "**4.What are the values of the following expressions ?**\n",
         "\n",
         "a) (5 > 4) and (3 == 5)\n",
         "\n",
