--- a/Python/Assignment_3.ipynb
+++ b/Python/Assignment_3.ipynb
@@ -192,7 +192,7 @@
       "source": [
         "**14. What is the purpose of the try clause? What is the purpose of the except clause?**\n",
         "\n",
-        "**Ans**: The **try** *clause is used to test a block of code*, and if there is error it is passed to *except block which handles the error.*"
+        "**Ans**: The **try** *clause is used to test a block of code*, and if there is error it is passed to **except** *block which handles the error.*"
       ],
       "metadata": {
         "id": "R_TsRpo8zSw2"
