--- a/Python/Assignment_2.ipynb
+++ b/Python/Assignment_2.ipynb
@@ -207,7 +207,7 @@
         "\n",
         " **Ans**:  **=**  is assignment operator which is used to store a value.\n",
         "\n",
-        " **==** is equal to which compares two values to give a boolean result."
+        " **==** is equal to which compares two values to give a Boolean result."
       ],
       "metadata": {
         "id": "FT5xFpD5ZI6d"
