--- a/Python/Assignment_1.ipynb
+++ b/Python/Assignment_1.ipynb
@@ -98,7 +98,7 @@
         "**Ans:**\n",
         "* spam = 10 statement is code which is used to assign a variable or display a \n",
         "\n",
-        "    variable, it doesnt do any computaion like expression.\n",
+        "    variable, it doesnt do any computation like expression.\n",
         "\n",
         "* expressions combination of operands and operators in which python compute and evaluate the output."
       ],
